# RimWorld-SaveEditorScripts

./: .gitignore  README.md  pyproject.toml
src/save_editor_scripts/: remove_extra_precepts.py
