[project]
name = "save-editor-scripts"
version = "0.1.0"
description = "A collection of scripts by @thakyZ to edit RimWorld saves."
authors = [
    {name = "thakyZ",email = "950594+thakyZ@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "save_editor_scripts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
elementpath = "^4.8.0"
lxml = "^5.3.2"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"
isort = "^6.0.1"
pylint = "^3.3.6"
lxml-stubs = "^0.5.1"

[tool.pylint]
extension-pkg-allow-list = [
    "lxml",
    "elementpath"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
